<resources>
    <string name="app_name">DoomKnowledge</string>
    <string name="do_you_have_a_good_knowledge_on_doom">Do you have a good knowledge on Doom?</string>
    <string name="begin">Begin!</string>
    <string name="how_mush_health_points_does_the_zombieman_have">how mush health points does the zombieman have?</string>
    <string name="_20">20</string>
    <string name="_5">5</string>
    <string name="_15">15</string>
    <string name="_30">30</string>
    <string name="what_boss_role_does_the_demon_spiderbrain_appeared_in_the_game">What boss role does the demon spiderbrain appeared in the game?</string>
    <string name="third_boss">Third Boss</string>
    <string name="second_boss">Second Boss</string>
    <string name="first_boss">First Boss</string>
    <string name="final_boss">Final boss</string>
    <string name="third_boss">Third Boss</string>
    <string name="when_does_the_cyberdemon_first_appear_in_the_game">When does the CyberDemon first appear in the game?</string>
    <string name="Final_boss">Final Boss</string>
    <string name="first_boss">First Boss</string>
    <string name="second_boss">Second Boss</string>
</resources>
